--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -39,9 +39,10 @@ jobs:
       run: ./gradlew test
 
   release:
+    if: github.ref_type == 'tag'
     needs: build
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v4
     
